tests/NormalTests/paczka1/small_fuzzy/98104087.err
Error in line 4: S118 S534 248,53
Error in line 1: S118 S534 89,3
